# vlm_client_server

./: README.md  main.py  prompts.json  requirements.txt  util.py
LLaVA/: LLaVA.py  LLaVA_copy.py  jj.json  yi_.py
LLaVA/llava/eval/: run_llava.py
client/: client.py  connection.py  pyproject.toml  secret.yml  token_saver.py  vlm_authenticator.py
server/: server.py
server/ansible/: site.yml
server/ansible/roles/deploy_llm/tasks/: main.yml
server/ansible/staging/: hosts
server/api/: auth_endpoints.py  data_endpoints.py
server/model/: Dockerfile  run_vlm.py  util.py
server/model/LLaVA/: models.py
server/model/LLaVA/llava/model/: builder.py
server/model/conf/: config.ini
